--- a/src/pages/LoginPage/LoginPage.css
+++ b/src/pages/LoginPage/LoginPage.css
@@ -1,11 +1,11 @@
-.profile-pg .jumbotron{
+.login-pg .jumbotron{
     background-color: rgb(235, 170, 193);
     margin: 0;
     margin-bottom: 10px;
     padding: 0;
 }
 
-.profile-pg .jumbotron h1{
+.login-pg .jumbotron h1{
     font-family: 'Sofia', cursive;
     font-size: 64px;
     line-height: normal;
